--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 </div>
                 <div class="row">
                     <ul class="info_board">
-                        <li class="result">Digit : </li>
+                        <li class="prediction" id="prediction">Prediction :</li>
                         <p></p>
-                        <li class="result">Accuracy:</li>
+                        <li class="confidence" id="confidence">Confidence :</li>
                     </ul>
                     
                 </div>
